<resources>
    <string name="app_name">Diopter Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Endmyopia</string>
    <string name="nav_header_subtitle">Diopter Calculator</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="measure">Measure</string>
    <string name="progress">Progress</string>
    <string name="settings">Settings</string>

    <string name="measurement_taken">Measurement for %s is saved</string>
    <string name="focus">FOCUS</string>
    <string name="measuring">Measuring %s</string>
    <string name="left_eye">left eye</string>
    <string name="right_eye">right eye</string>
    <string name="both_eyes">both eyes</string>
    <string name="left_eye_short">L</string>
    <string name="right_eye_short">R</string>
    <string name="both_eyes_short">BOTH</string>
    <string name="deleted">Measurement deleted</string>
    <string name="delete">Delete</string>
    <string name="delete_measurement">Delete measurement %s for %s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="measure_with_gesture">Measure by covering nose</string>
    <string name="play_sound">Play sound when measuring</string>
    <string name="pt">pt</string>
    <string name="focus_font_size">Focus text font size</string>
    <string name="focus_text">Focus text</string>

    <string name="change_color_hint">You can tap on the focus text to change its color</string>
    <string name="info">Useful tips</string>
    <string name="cover_nose_tip">Pro Tip: You can cover your nose to take a measurement without pressing a button</string>
    <string name="progress_swipe_tip">Swipe left for the table view</string>
    <string name="export_summary">Export your progress as a endmyopia.json file</string>
    <string name="export">Export</string>
    <string name="sharing_progress">Progress as for %s</string>
    <string name="cant_import">Can\'t import data: %s</string>
    <string name="import_warn">This will import the progress data and delete your existing data (if any). This can\'t be undone. Proceed?</string>
    <string name="import_complete">Import Completed</string>
    <string name="help_menu">Help</string>
    <string name="help"># Hello!\n

      > a quote

      ```
      code block
      ```
    </string>
    <string name="noData">Your measurements will appear here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
