<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="org.endmyopia.calc.data.MeasurementMode" />

        <variable
                name="holder"
                type="org.endmyopia.calc.progress.ProgressStateHolder" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".progress.ProgressFragment">

            <LinearLayout
                    android:id="@+id/filters"
                    style="?android:attr/buttonBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent">

                <Button
                        android:id="@+id/filterLeft"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:text="@string/left_eye" />

                <Button
                        android:id="@+id/filterBoth"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:text="@string/both_eyes" />

                <Button
                        android:id="@+id/filterRight"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:text="@string/right_eye" />
            </LinearLayout>

            <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/white"
                    app:layout_constraintBottom_toTopOf="@+id/filters"
                    app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorPrimaryDark"
                    app:srcCompat="@drawable/ic_delete"
                    app:layout_constraintBottom_toTopOf="@+id/filters"
                    app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</layout>
